objects/Case_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Case Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>